--- a/app/views/devise/registrations/_editform.html.erb
+++ b/app/views/devise/registrations/_editform.html.erb
@@ -1,12 +1,12 @@
 <% content_for :title, "Edition profil | Raidators" %>
 
 <!-- Main navigation -->
-<div class="container-fluid mt-3 mb-5 ">
+<div class="container-fluid mt-3 mb-5 light-background-raidators">
 
   <!-- Full Page Intro -->
   <section class:"image-signup">
     <!-- Mask & flexbox options-->
-    <div class="mask d-flex justify-content-center align-items-center">
+    <div class="d-flex justify-content-center align-items-center">
       <!-- Content -->
       <div class="container py-5 my-5">
         
