--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,4 @@
-<% content_for :title, "Profil | Raidators" %>
 
-<div class="container">
 <% if current_user && current_user.admin %>
 
 <h3> Profil Administrateur </h3>
@@ -92,4 +90,7 @@
   </div>
 </div>
 
+
+
 <% end %>
+ <%= render 'profil_user' %>
