push in the wrong branch - modification of routes

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -12,10 +12,10 @@
       <div class="col-md-4">
         <ul class="list-unstyled d-flex justify-content-center mb-0 mt-2">
           <li>
-            <%= link_to "Équipe", team_path, class:"mx-3 nav-link" %>
+            <%= link_to "Équipe", equipe_path, class:"mx-3 nav-link" %>
           </li>
           <li>
-            <%= link_to "Contact", team_path, class:"mx-3 nav-link" %>
+            <%= link_to "Contact", equipe_path, class:"mx-3 nav-link" %>
           </li>
         </ul>
       </div>
