--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,20 +8,20 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
     <ul class="navbar-nav navbar-hamburger-display">
       <li class="nav-item active">
-        <%= link_to "Accueil", home_page_path, class:"nav-link" %>
+        <%= link_to "Accueil", acceuil_path, class:"nav-link" %>
         <span class="sr-only">(current)</span>
       </li>
       <li class="nav-item">
-        <%= link_to "Professionnels", partnership_path, class:"nav-link" %>
+        <%= link_to "Professionnels", partenariat_path, class:"nav-link" %>
       </li> 
       <li class="nav-item">
         <%= link_to "Faire un don", products_path, class:"nav-link" %>
       </li> 
       <li class="nav-item">
-        <%= link_to "Collecte de fourniture", equipments_path, class:"nav-link" %> 
+        <%= link_to "Collecte de fourniture", equipements_path, class:"nav-link" %> 
       </li> 
       <li class="nav-item">
-        <%= link_to "L'équipe", team_path, class:"nav-link" %>
+        <%= link_to "L'équipe", equipe_path, class:"nav-link" %>
       </li>
     </ul>
     <ul class="navbar-nav ml-auto">  
