--- a/app/views/static_pages/partnership.html.erb
+++ b/app/views/static_pages/partnership.html.erb
@@ -253,7 +253,7 @@
               Récoltez du matériel caritatif ou sponsorisez-nous en nous permettant de revendre vos produits sur notre plateforme, ou en nous équipant pour le raid (équipement numériques, camping
               </p>
             <!-- Read more button -->
-            <%= link_to 'Partenariat nature', equipments_path, class:"btn btn-success btn-raidators", target:"_blank"%>
+            <%= link_to 'Partenariat nature', equipements_path, class:"btn btn-success btn-raidators", target:"_blank"%>
 
           </div>
           <!-- Grid column -->
