--- a/app/views/static_pages/privatevisitors.html.erb
+++ b/app/views/static_pages/privatevisitors.html.erb
@@ -55,7 +55,7 @@
         <!-- Excerpt -->
         <p>Notre mission est d'acheminer du matériel scolaire, sportif et médical dans des écoles défavorisées. Vous pouvez nous aider à atteindre les 70Kg d’équipements en faisant un don de matériel ! plus d’informations sur la page don de matériel.</p>
 
-        <button type="button" class="btn btn-success text-white p-2 mx-1"><%= link_to "Faire un don", equipments_path %></button>
+        <button type="button" class="btn btn-success text-white p-2 mx-1"><%= link_to "Faire un don", equipements_path %></button>
       </div>
       <!-- Grid column -->
 
