--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,7 +8,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
     <ul class="navbar-nav navbar-hamburger-display">
       <li class="nav-item active">
-        <%= link_to "Accueil", acceuil_path, class:"nav-link" %>
+        <%= link_to "Accueil", accueil_path, class:"nav-link" %>
         <span class="sr-only">(current)</span>
       </li>
       <li class="nav-item">
