--- a/app/views/devise/registrations/_editform.html.erb
+++ b/app/views/devise/registrations/_editform.html.erb
@@ -4,62 +4,62 @@
 <div class="container-fluid mt-3 mb-5 light-background-raidators">
 
   <!-- Full Page Intro -->
-  <section class:"image-signup">
-    <!-- Mask & flexbox options-->
-    <div class="d-flex justify-content-center align-items-center">
+  <section class:"image-edit-registration">
+    <!-- background -->
+    <div class="col-lg-6 col-md-4 form-background-raidators">
       <!-- Content -->
-      <div class="container py-5 my-5">
+      <div class="container my-5">
         
-        <h3 class="font-weight-bold text-center text-dark pb-2">Modifier mon mot de passe</h3>
+        <h3 class="text-center pb-2">Modifier mon mot de passe</h3>
         <p class="lead text-center text-dark pt-2 mb-5"></p>
         
         <!--Grid row-->
-        <div class="row d-flex align-items-center justify-content-center">
+        <div class="row d-flex align-items-center justify-content-center form-background-raidators">
           <!--Grid column-->
-          <div class="col-md-6 col-xl-5">
+          <div class="col-md-6 col-xl-8">
             <!--Form-->
             <div class="card">
-              <div class="card-body z-depth-2 px-4">
+              <div class="card-body px-4">
 
               <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
                 <%= render "devise/shared/error_messages", resource: resource %>
-                  <div class:"field md-form mt-3">
+                  <div class="field md-form mt-3">
                     <%= f.label :email %><br />
-                    <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"form-control"  %>
+                    <%= f.email_field :email, autofocus: true, autocomplete: "email", class:"form-control form-control-raidators"  %>
                   </div>
 
                   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-                  <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+                  <div>En attente de confirmation du mail: <%= resource.unconfirmed_email %></div>
                   <% end %>
 
                   <div class="field md-form mt-3">
-                    <%= f.label :password %> <i>(ne pas remplir si vous ne voulez pas changer de mot de passe)</i><br>
-                    <%= f.password_field :password, autocomplete: "new-password", class:"form-control" %>
+                    <%= f.label :mot_de_passe %> <i>(ne pas remplir si vous ne voulez pas changer de mot de passe)</i><br>
+                    <%= f.password_field :password, autocomplete: "new-password", class:"field md-form form-control form-control-raidators" %>
                     <% if @minimum_password_length %>
-                      <br />
-                      <em><%= @minimum_password_length %> characters minimum</em>
+                      <br/>
+                      <em><%= @minimum_password_length %> caractères minimum</em>
                     <% end %>
                   </div>
 
-                  <div class="field md-form mt-3">
-                    <%= f.label :password_confirmation %><br/>
-                    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+                  <div class="field md-form">
+                    <%= f.label :confirmation_mot_de_passe %><br/>
+                    <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"field md-form form-control form-control-raidators" %>
                   </div>
 
-                  <div class="field md-form mt-3">
-                    <%= f.label :current_password, class:"field md-form mt-3" %> <i>(Nous avons besoin de votre mot de passe actuel pour confirmer vos changements)</i><br />
-                    <%= f.password_field :current_password, autocomplete: "current-password", class:"field md-form mt-3" %>
+                  <div class="field md-form">
+                    <%= f.label :mot_de_passe_actuel %> <i>(Nous avons besoin de votre mot de passe actuel pour confirmer vos changements)</i><br/>
+                    <%= f.password_field :current_password, autocomplete: "current-password", class:"field md-form form-control form-control-raidators mt-3" %>
                   </div>
 
-                  <div class="actions text-center my-3">
-                     <%= f.submit "Mettre à jour mon mot de passe",class:"btn btn-primary btn-md btn-rounded mx-0" %>
+                  <div class="actions my-3">
+                     <%= f.submit "Mettre à jour mon mot de passe",class:"btn btn-primary btn-md btn-dark-raidators mx-0" %>
                   </div>
                 <% end %>
                 <br>
               
-                <h3 >Supprimer mon compte</h3>
+                <h3>Supprimer mon compte</h3>
               
-                <p>Vous voulez supprimer votre compte? <%= button_to "Supprimer mon compte", registration_path(resource_name), data: { confirm: "êtes-vous sûrs ?" }, method: :delete, class:"btn btn-primary btn-md btn-rounded mx-0" %></p>
+                <p>Vous voulez supprimer votre compte? <%= button_to "Supprimer mon compte", registration_path(resource_name), data: { confirm: "êtes-vous sûrs ?" }, method: :delete, class:"btn btn-primary btn-md btn-dark-raidators mx-0" %></p>
               
                 <%= link_to "Retour", :back %>
                   
@@ -74,7 +74,7 @@
       </div>
       <!-- Content -->
     </div>
-    <!-- Mask & flexbox options-->
+    <!--Fin background-->
   </section>
   <!-- Full Page Intro -->
 </div>
