--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,12 +9,12 @@
       <div class="container py-5 my-5  ">
         
         <h3 class="text-center pb-2">Prêt à nous rejoindre ?</h3>
-        <p class="lead text-center pt-2 mb-5">La solidarité n’a pas de frontière.</p>
+        <p class="lead text-center pt-2 mb-5">Raidators, la solidarité n’a pas de frontière.</p>
         
         <!--Grid row-->
         <div class="row d-flex align-items-center justify-content-center form-background-raidators">
           <!--Grid column-->
-          <div class="col-md-6 col-xl-5">
+          <div class="col-md-6 col-xl-8">
             <!--Form-->
             <div class="card">
               <div class="card-body px-4  ">
@@ -22,12 +22,12 @@
                   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
                     <%= render "devise/shared/error_messages", resource: resource %>
 
-                    <div class="field md-form mt-3">
+                    <div class="field md-form form-control-raidators mt-3">
                       <%= f.label :email %><br />
                       <%= f.email_field :email, autofocus: true, autocomplete: "email", id:"form3", class:"form-control form-control-raidators" %>
                     </div>
 
-                    <div class="field md-form mt-3">
+                    <div class="field md-form form-control-raidators mt-3">
                       <%= f.label :password %>
                       <% if @minimum_password_length %>
                       <em>(<%= @minimum_password_length %> characters minimum)</em>
@@ -35,7 +35,7 @@
                       <%= f.password_field :password, autocomplete: "new-password", id:"form4", class:"form-control form-control-raidators" %>
                     </div>
 
-                    <div class="field md-form mt-3">
+                    <div class="field md-form form-control-raidators mt-3">
                       <%= f.label :password_confirmation %><br />
                       <%= f.password_field :password_confirmation, autocomplete: "new-password", id:"form4", class:"form-control form-control-raidators" %>
                     </div>
@@ -56,7 +56,7 @@
       </div>
       <!-- Content -->
     </div>
-    <!-- Mask & flexbox options-->
+    <!-- div background-->
   </section>
   <!-- Full Page Intro -->
 </div>
