--- a/app/views/static_pages/equipments.html.erb
+++ b/app/views/static_pages/equipments.html.erb
@@ -47,10 +47,16 @@
         <div class="col-lg-5">
 
           <!-- Featured image -->
-          <div class="view overlay  mb-lg-0 mb-4 ">
-            <%= image_tag("equipment/post.png", class:"img-fluid card-with-right-left-image-raidators", alt:"Sample image") %> 
-          </div>
+          <div class="row">
+            <div class="col-md-6 map-container">
 
+              <!-- Google Maps -->
+              <div id="map-within-card-2" class="rounded-left">
+                <iframe src="https://www.atlistmaps.com/map/44dddbcf-2c83-4c69-b563-cd35276cfbce?share=true" allow="geolocation"  frameborder="0" scrolling="no" allowfullscreen></iframe>              
+              </div>
+              <!-- Google Maps -->
+
+            </div>
         </div>
         <!-- Grid column -->
 
