--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,8 @@
 
       <%= stylesheet_link_tag 'application', media: 'all' %>
       <%= javascript_include_tag 'application'%>
-      <%= favicon_link_tag asset_path('cheetah.png') %>    
+      <%= favicon_link_tag asset_path('cheetah.png') %>  
+      <script src="https://js.stripe.com/v3/"></script>  
 
 
   </head>
