--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -191,6 +191,7 @@ section{
 .card-product-aligment{
   margin: auto;
   text-align: center;
+}
 /* STRIPE */
 
 .stripe-button-el {
@@ -204,4 +205,12 @@ section{
   color: white;
 }
 
-/* ----------PROFIL */
+/* ----------PROFIL ------*/
+
+.avatar-storage {
+vertical-align: middle;
+border-style: none;
+height: 100%;
+width: 100%;
+
+}
