--- a/app/views/static_pages/equipments.html.erb
+++ b/app/views/static_pages/equipments.html.erb
@@ -44,19 +44,15 @@
         <!-- Grid column -->
 
         <!-- Grid column -->
-        <div class="col-lg-5">
+        <div class="col-lg-5 ">
 
           <!-- Featured image -->
-          <div class="row">
-            <div class="col-md-6 map-container">
+          
+            <!-- Google Maps -->
+              <iframe src="https://www.atlistmaps.com/map/44dddbcf-2c83-4c69-b563-cd35276cfbce?share=true" allow="geolocation"  frameborder="0" scrolling="no" allowfullscreen class="map-sizing"></iframe>              
+            <!-- Google Maps -->
 
-              <!-- Google Maps -->
-              <div id="map-within-card-2" class="rounded-left">
-                <iframe src="https://www.atlistmaps.com/map/44dddbcf-2c83-4c69-b563-cd35276cfbce?share=true" allow="geolocation"  frameborder="0" scrolling="no" allowfullscreen></iframe>              
-              </div>
-              <!-- Google Maps -->
-
-            </div>
+           
         </div>
         <!-- Grid column -->
 
