--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -208,16 +208,11 @@ section{
 
 /* ----------Maps--------*/
 
-.map-container {
-  display: block;
-  position: relative;
-  margin-left: 50px;
-  margin-right: -50px;
-  left: 50px;
-  top: 40px; 
-  height: 400px; 
-  right: 200px;
+.maps-sizing {
+
+  height: 100%; 
   width: 100%;
+  right: -10%;
 
 
 }
