--- a/app/views/users/_profil.html.erb
+++ b/app/views/users/_profil.html.erb
@@ -169,7 +169,7 @@
 
 
 <% else %>
-<% content_for :title, "Admin | Raidators" %>
+<% content_for :title, "Profil | Raidators" %>
 
   <div class="container my-5">
 
