resolve conflict in heroku, error rgb...

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -24,7 +24,7 @@
 }
 
 .btn-light-raidators{
-  background: rgb(235, 235, 235, 1);
+  background: rgb(235, 235, 235);
   /* Actionable Item */
   border-color:white;
   box-sizing: border-box;
