--- a/app/views/carts/_web_cart.html.erb
+++ b/app/views/carts/_web_cart.html.erb
@@ -38,7 +38,7 @@
                           <% @cart.selected_products.each do |myproduct| %> 
                           <hr class="mb-5">
 
-                          <img class="img-fluid z-depth-1-half" alt="Second sample image"> <%=myproduct.product.image_url %> </img>
+                          <img class="img-fluid" alt="Second sample image"> <%=myproduct.product.image_url %> </img>
                           <% end %>
       
       
