--- a/app/views/devise/passwords/_editpassword.html.erb
+++ b/app/views/devise/passwords/_editpassword.html.erb
@@ -9,7 +9,7 @@
     <div class="col-lg-6 col-md-4 form-background-raidators">
       <!-- Content -->
       <div class="container py-5 my-5">
-        <p class="lead text-center pt-2 mb-5 text-dark">Veuillez remplir le formulaire ci-après pour modifier votre mot de passe.</p>
+        <p class="lead text-center pt-2 mb-5">Veuillez remplir le formulaire ci-après pour modifier votre mot de passe.</p>
  
         <!--Grid row-->
         <div class="row d-flex align-items-center justify-content-center form-background-raidators">
@@ -28,12 +28,12 @@
                     <% if @minimum_password_length %>
                       <em>(<%= @minimum_password_length %> characters minimum)</em><br />
                     <% end %>
-                    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
+                    <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class:"form-control form-control-raidators" %>
                   </div>
 
                   <div class="field md-form form-control-raidators mt-3">
                     <%= f.label :password_confirmation, "Confirmer le nouveau mot de passe" %><br />
-                    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+                    <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"form-control form-control-raidators"  %>
                   </div>
 
                   <div class="actions text-center my-3">
