--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,13 @@
 <!-- Footer -->
 
-<footer class="page-footer font-small grey lighten-3 py-4 dark-grey-text">
+<footer class="page-footer font-small grey lighten-3 py-4">
 
   <!-- Footer Elements -->
   <div class="container">
 
     <div class="row">
       <div class="col-md-4">
-        <h3 class="font-weight-bold mb-0">Raidators</h3>
+        <h3 class="mb-0">Raidators</h3>
       </div>
       <div class="col-md-4">
         <ul class="list-unstyled d-flex justify-content-center mb-0 mt-2">
@@ -21,7 +21,7 @@
       </div>
       <div class="col-md-4">
         <!-- Copyright -->
-        <div class="footer-copyright text-right bg-transparent dark-grey-text mt-2">© 2020.
+        <div class="footer-copyright text-right bg-transparent mt-2">© 2020.
           <p> All rights reserved.</p>
         </div>
         <!-- Copyright -->
