--- a/app/views/carts/_stripe.html.erb
+++ b/app/views/carts/_stripe.html.erb
@@ -1,3 +1,3 @@
 <% if @cart.total > 0%>
-<%= button_to "Passer commande (NEXT GEN)", checkout_create_path(total: @cart.total), class: "btn btn-primary my-3", remote: true %>
+<%= button_to "Passer commande", checkout_create_path(total: @cart.total), class: "btn btn-success my-3", remote: true %>
 <% end %>
