--- a/app/views/posts/_list_articles.html.erb
+++ b/app/views/posts/_list_articles.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, "Articles | Raidators" %>
+
 <div class="container mt-5">
 
 
@@ -20,12 +22,11 @@
       <div class="col-lg-5 col-xl-4">
 
         <!-- Featured image -->
+        <hr class="mb-5">
 
-        <div class="view overlay rounded z-depth-1-half mb-lg-0 mb-4">
-          <%= post.image_url %>          
-            <div class="mask rgba-white-slight"></div>
+        <%= image_tag post.image_url, class:"view overlay rounded z-depth-1-half mb-lg-0 mb-4 post_image" %>          
+        <div class="mask rgba-white-slight"></div>
           
-        </div>
 
       </div>
       <!-- Grid column -->
@@ -35,12 +36,9 @@
 
         <!-- Post title -->
         <h4 class="font-weight-bold mb-3"><strong><%= post.title %></strong></h4>
-        <!-- Excerpt -->
-        <p class="dark-grey-text">Résumé de l'article</p>
-        <!-- Post data -->
-        <p>Rédigé le 'DATE'</p>
         <!-- Read more button -->
-        <button class="btn-primary" type="submit"> <%= link_to " Voir l'article complet", post_path(post.id) %></button>
+        <%= link_to "Voir l'article", post_path(post.id), class:"btn btn-success btn-raidators"%>
+
       
 
 
