--- a/app/views/static_pages/team.html.erb
+++ b/app/views/static_pages/team.html.erb
@@ -6,8 +6,8 @@
       <section class="">
     
         <!-- Section heading -->
-        <h2 class="text-left font-weight-bold mb-5">Présentation de l’équipe</h2>
-        <h3 class="text-left font-weight-bold mb-5">La petite histoire des raidators</h3>
+        <h2 class="text-left mb-5">Présentation de l’équipe</h2>
+        <h3 class="text-left mb-5">La petite histoire des raidators</h3>
         <div class="text-in-three-columns ">
           <p > L'équipage est composé de 3 pilotes, voyageurs téméraires aguerris qui se serreront les coudes pour atteindre leur but. En effet, au cours de leurs différentes aventures, ils ont pu se rendre compte qu'ils pouvaient aider autrement les pays et les enfants dans le besoin. Ils cherchaient à se rendre utile autrement qu'en visitant le pays....En juillet 2020, sur la côte, face à l'océan, l'histoire des Raid'ateurs et de leur petite 205 commence.
           Ils s'apprêtent à parcourir un long périple pour accomplir une mission très importante : livrer du matériel dans des pays de l'Europe de l'Est. Depuis, ils ont créé une association, se sont inscrits à Europ.Raid, ont acheté leur voiture, et ils ne leur manque plus que vous pour atteindre leurs objectifs financier et en dons en matériel...Qu'attendez-vous pour les soutenir ?  </p>
