--- a/app/views/static_pages/equipments.html.erb
+++ b/app/views/static_pages/equipments.html.erb
@@ -7,8 +7,8 @@
     <!--Section: Content-->
     <section class="">
       <!-- Section heading -->
-      <h2 class="text-left font-weight-bold mb-5">Donner accès à l'éducation</h2>
-      <p class="text-left font-weight-bold mb-5">L'Europ.Raid est le premier Raid-Aventure d’ Europe. Il organise cette action dans les pays de l’Europe de l’Est depuis 2014.
+      <h2 class="text-left mb-5">Donner accès à l'éducation</h2>
+      <p class="text-left mb-5">L'Europ.Raid est le premier Raid-Aventure d’ Europe. Il organise cette action dans les pays de l’Europe de l’Est depuis 2014.
       Ce raid consiste à traverser l’Europe en Peugeot 205 avec à son bord 70 Kg de matériel scolaire, sportif ou médical. Ces dernières seront ensuite distribuées dans des écoles et orphelinats locaux d’Europe de l’Est pour aider les enfants défavorisés.<br> 
       <br>
       Vous trouverez ci-dessous quels équipements nous pouvons collecter et quels sont les points de collectes. </p>
@@ -34,7 +34,7 @@
           <i class="fas fa-envelope-open-text"></i>
         
           <!-- Post title -->
-          <h3 class="font-weight-bold mb-3"><strong>Vous êtes Particulier  </strong></h3>
+          <h3 class="mb-3"><strong>Vous êtes Particulier  </strong></h3>
           <!-- Excerpt -->
           <p> Vous souhaitez soutenir une action solidaire ? Vous pouvez simplement nous expédier le matériel à l'adresse suivante :
           10 Route de la Noé d'Armengeo 44600 Saint-Nazaire
@@ -92,7 +92,7 @@
           <i class="fas fa-shopping-cart"></i>
           
           <!-- Post title -->
-          <h3 class="font-weight-bold mb-3"><strong>Magasin</strong></h3>
+          <h3 class="mb-3"><strong>Magasin</strong></h3>
           <!-- Excerpt -->
           <p>Les fêtes de fin d'années approchent ! La solidarité est mise à l'honneur pendant cette période. Pourquoi ne pas soutenir une cause solidaire en mettant en place un point de collecte ? Nous vous fournissons des affiches explicatives et venons récupérer le matériel. </p>
 
@@ -124,7 +124,7 @@
           <i class="fas fa-school"></i>
         
           <!-- Post title -->
-          <h3 class="font-weight-bold mb-3"><strong> Écoles</strong></h3>
+          <h3 class="mb-3"><strong> Écoles</strong></h3>
           <!-- Excerpt -->
           <p>En tant qu'établissement scolaire ou parent d'élève, nous proposons de réaliser une collecte au sein de l'établissement. En échange, nous pourrons venir expliquer et témoigner de notre expérience avant ou après la course. Nous vous enverrons aussi une carte lors de notre voyage.</p>
 
@@ -154,7 +154,7 @@
 
 <section class="light-background-raidators">
   <div class="container align-items-center">
-    <h3 class="text-left font-weight-bold mb-5">La liste de matériel</h2>
+    <h3 class="text-left mb-5">La liste de matériel</h2>
     <section>
       <!--First row-->
       <div class="row">
@@ -165,10 +165,10 @@
           <!-- Nav tabs -->
           <ul class="nav md-pills flex-center flex-wrap mx-0" role="tablist">
             <li class="nav-item">
-              <a class="nav-link font-weight-bold text-uppercase" data-toggle="tab" href="#panel31" role="tab">Scolaire & Sportif</a>
+              <a class="nav-link text-uppercase" data-toggle="tab" href="#panel31" role="tab">Scolaire & Sportif</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link font-weight-bold text-uppercase" data-toggle="tab" href="#panel32" role="tab">Hygiène & Médical</a>
+              <a class="nav-link text-uppercase" data-toggle="tab" href="#panel32" role="tab">Hygiène & Médical</a>
             </li>
           </ul>
 
