--- a/app/views/static_pages/privatevisitors.html.erb
+++ b/app/views/static_pages/privatevisitors.html.erb
@@ -5,8 +5,8 @@
   <!--Section: Content-->
   <section class="">
     <!-- Section heading -->
-    <h2 class="text-left font-weight-bold mb-5">Donner accès à l'éducation</h2>
-    <p class="text-left font-weight-bold mb-5">L’ Europ’Raid est le premier Raid-Aventure d’ Europe. Il organise cette action dans les pays de l’Europe de l’Est depuis 2014.
+    <h2 class="text-left mb-5">Donner accès à l'éducation</h2>
+    <p class="text-left mb-5">L’ Europ’Raid est le premier Raid-Aventure d’ Europe. Il organise cette action dans les pays de l’Europe de l’Est depuis 2014.
     Ce raid consiste à traverser l’Europe en Peugeot 205 avec à son bord 70 Kg de matériel scolaire, sportif ou médical. Ces dernières seront ensuite distribuées dans des écoles et orphelinats locaux d’Europe de l’Est pour aider les enfants défavorisés.</p>
     <br>
   </section>
@@ -28,7 +28,7 @@
   </div>
 <div class= "container mt-5">
   <div class="col-lg-10 mt-5"> 
-  <h3 class="text-left font-weight-bold mb-5">Comment participer ?</h3>
+  <h3 class="text-left mb-5">Comment participer ?</h3>
  </div>
 </div>
 
@@ -51,7 +51,7 @@
         <i class="fas fa-book"></i>
       
         <!-- Post title -->
-        <h3 class="font-weight-bold mb-3"><strong> Faire un don matériel </strong></h3>
+        <h3 class="mb-3"><strong> Faire un don matériel </strong></h3>
         <!-- Excerpt -->
         <p>Notre mission est d'acheminer du matériel scolaire, sportif et médical dans des écoles défavorisées. Vous pouvez nous aider à atteindre les 70Kg d’équipements en faisant un don de matériel ! plus d’informations sur la page don de matériel.</p>
 
@@ -63,7 +63,7 @@
       <div class="col-lg-5">
 
         <!-- Featured image -->
-        <div class="view overlay rounded z-depth-2 mb-lg-0 mb-4">
+        <div class="view overlay rounded mb-lg-0 mb-4">
           <%= image_tag("equipment/schoolmaterial.png", class:"img-fluid", alt:"Sample image") %> 
         </div>
 
@@ -90,7 +90,7 @@
       <!-- Grid column -->
       <div class="col-lg-5">
         <!-- Featured image -->
-        <div class="view overlay rounded z-depth-2 mb-lg-0 mb-4">
+        <div class="view overlay rounded mb-lg-0 mb-4">
         <%= image_tag("equipment/wineshop.png", class:"img-fluid", alt:"Sample image") %> 
         </div>
       </div>
@@ -103,7 +103,7 @@
         <i class="fas fa-shopping-cart"></i>
         
         <!-- Post title -->
-        <h3 class="font-weight-bold mb-3"><strong>Faire un achat solidaire ou un don</strong></h3>
+        <h3 class="mb-3"><strong>Faire un achat solidaire ou un don</strong></h3>
         <!-- Excerpt -->
         <p>Les fêtes de fin d'années approchent ! La solidarité est mise à l'honneur pendant cette période. Pourquoi ne pas soutenir une cause solidaire ? Pour nous soutenir, vous pouvez faire un achat solidaire sur notre magasin en ligne ou faire directement un don pour nous aider à couvrir les frais logistiques.</p>
 
