--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -17,6 +17,10 @@
 
         <div class="form-group">
           <%= editpost.text_field :image_url, placeholder: 'Image', class:"form-control form-control-raidators" %>
+          <%= form_tag user_avatars_path(@user), multipart: true do %>
+            <%= file_field_tag :avatar %>
+            <%= submit_tag "mettre à jour" %>
+          <% end %>
         </div>
 
         <div class="form-group">
