--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,5 +13,5 @@
   <%# <button class="btn-primary" type="submit"> <%= link_to "modifier l'article", edit_post_path(post.id) %>
 <%# <%end%> 
 
-
+<%= render :partial => "shared/banner" %>
 <%= render 'list_articles'%>
