--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -12,7 +12,7 @@
             <!--Grid column-->
             <div class="col-lg-5 col-md-12 mb-0 mb-md-0">
 
-              <h3 class="font-weight-bold">Contact Us</h3>
+              <h3 class="">Contact Us</h3>
 
               <p class="text-muted">Vous avez des questions ou simplement besoin de plus d'informations ? Contactez-nous via le formulaire. </p>
 
