--- a/app/views/static_pages/car.html.erb
+++ b/app/views/static_pages/car.html.erb
@@ -2,10 +2,10 @@
 
 
   <!--Section: Content-->
-  <section class="text-center dark-grey-text">
+  <section class="text-center ">
 
     <!-- Section heading -->
-    <h3 class="font-weight-bold pb-2 mb-4">Our pricing plans</h3>
+    <h3 class=" pb-2 mb-4">Our pricing plans</h3>
     <!-- Section description -->
     <p class="text-muted w-responsive mx-auto mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
       Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam
@@ -24,7 +24,7 @@
           <div class="price header white-text blue rounded-top">
             <h2 class="number">10</h2>
             <div class="version">
-              <h5 class="mb-0">Basic</h5>
+              <p class="mb-0">Basic</p>
             </div>
           </div>
 
@@ -69,7 +69,7 @@
           <div class="price header white-text indigo rounded-top">
             <h2 class="number">20</h2>
             <div class="version">
-              <h5 class="mb-0">Pro</h5>
+              <p class="mb-0">Pro</p>
             </div>
           </div>
 
@@ -114,7 +114,7 @@
           <div class="price header white-text deep-purple rounded-top">
             <h2 class="number">30</h2>
             <div class="version">
-              <h5 class="mb-0">Enterprise</h5>
+              <p class="mb-0">Enterprise</p>
             </div>
           </div>
 
