--- a/app/views/static_pages/equipments.html.erb
+++ b/app/views/static_pages/equipments.html.erb
@@ -22,7 +22,7 @@
 <section>
   <div class="container mt-5">
     <!--Section: Content-->
-    <section class="dark-grey-text">
+    <section class="">
         
       <!-- Grid row -->
       <div class="row align-items-center">
@@ -70,7 +70,7 @@
   <div class="container mt-5">
 
     <!--Section: Content-->
-    <section class="dark-grey-text">
+    <section class="">
         
       <!-- Grid row -->
       <div class="row align-items-center">
@@ -112,7 +112,7 @@
 
   <div class="container mt-5">
     <!--Section: Content-->
-    <section class="dark-grey-text">
+    <section class="">
         
       <!-- Grid row -->
       <div class="row align-items-center">
