--- a/app/views/users/_profil.html.erb
+++ b/app/views/users/_profil.html.erb
@@ -52,7 +52,7 @@
               <i class="fas fa-chart-line fa-lg teal p-4 ml-3 mt-n3 rounded text-white"></i>
               <div class="float-right text-right p-3">
                 <p class="text-uppercase text-muted mb-1"><small>subscriptions</small></p>
-                <h4 class="mb-0">3534</h4>
+                <p class="mb-0">3534</p>
               </div>
             </div>
   
@@ -80,7 +80,7 @@
               <i class="fas fa-chart-pie fa-lg purple p-4 ml-3 mt-n3 rounded text-white"></i>
               <div class="float-right text-right p-3">
                 <p class="text-uppercase text-muted mb-1"><small>traffic</small></p>
-                <h4 class="mb-0">656 234</h4>
+                <p class="mb-0">656 234</p>
               </div>
             </div>
   
@@ -118,7 +118,7 @@
         <div class="col-12">
           <div class="card card-list">
             <div class="card-header white d-flex justify-content-between align-items-center py-3">
-              <p class="h5-responsive mb-0">Commandes des préventes</p>
+              <p class="mb-0">Commandes des préventes</p>
             </div>
             <div class="card-body">
               <table class="table">
@@ -178,7 +178,7 @@
       <div class="card">
         <div class="card-body">
           <div class="card-header white d-flex justify-content-between">
-            <p class="h3-responsive font-weight-bold mb-0">Bonjour <%= @user.email.split('@')[0].capitalize %>, voici votre profil</p>
+            <p class="h3-responsive  mb-0">Bonjour <%= @user.email.split('@')[0].capitalize %>, voici votre profil</p>
           </div>
           <div class="row pt-4">
             <div class="col-lg-4 col-md-4 col-sm-6 pb-4">            
@@ -214,7 +214,7 @@
         <div class="col-12">
           <div class="card card-list">
             <div class="card-header white d-flex justify-content-between align-items-center py-3">
-              <p class="h5-responsive mb-0">Vos commandes</p>
+              <p class="mb-0">Vos commandes</p>
             </div>
             <div class="card-body">
               <table class="table">
