--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -15,7 +15,7 @@
             <%= link_to "Équipe", equipe_path, class:"mx-3 nav-link" %>
           </li>
           <li>
-            <%= link_to "Contact", equipe_path, class:"mx-3 nav-link" %>
+            <%= link_to "Contact", contact_path, class:"mx-3 nav-link" %>
           </li>
         </ul>
       </div>
