--- a/app/views/static_pages/equipments.html.erb
+++ b/app/views/static_pages/equipments.html.erb
@@ -92,7 +92,7 @@
           <i class="fas fa-shopping-cart"></i>
           
           <!-- Post title -->
-          <h3 class="mb-3"><strong>Magasin</strong></h3>
+          <h3 class="mb-3">Magasin</h3>
           <!-- Excerpt -->
           <p>Les fêtes de fin d'années approchent ! La solidarité est mise à l'honneur pendant cette période. Pourquoi ne pas soutenir une cause solidaire en mettant en place un point de collecte ? Nous vous fournissons des affiches explicatives et venons récupérer le matériel. </p>
 
