--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -94,7 +94,7 @@
   margin-bottom: 10px;
 }
 
-.small-card-image-raidators {
+.top-corner-radius-card-image-raidators {
   border-top-left-radius: 12px ;
   border-top-right-radius: 12px ;
   box-shadow: 0px 0px 0px;
@@ -111,7 +111,7 @@
 }
 
 
-.video-size-homepage-raidators{
+.content-full-size-div-raidator{
   height: 100%;
   width: 100%;
 }
@@ -140,7 +140,7 @@ p{
   justify-content: auto;
 }
 
-/* ------------background body------------ */
+/* ------------background and color body------------ */
 .light-background-raidators{
   background-color: rgb(249, 249, 249);
   padding-top:5%; 
@@ -149,6 +149,10 @@ p{
 section{
   margin-top: 5%;
   margin-bottom:5% ;
+}
+
+.dark-color-raidator{
+  background-color: #1B221D;
 }
 /* ------------Banner------------ */
 .banner{
